frontend/test/should_pass/stringnode.gm
node class StringNode
{
	str:string;
}
