frontend/test/should_fail/index_where_non_index_expected_model.gm
node class N
{
	i : int;
}

index fooi { N.i }
